[package]
name = "robin_good"
version = "0.1.0"
authors = ["ilyadruzhinin"]

[dependencies]
sha3 = "0.7.2"
web3 = { git = "https://github.com/protocolx/rust-web3",version = "0.2.0", default-features = false, features = ["http"] }
rustc-hex = "1.0.0"
futures = "0.1.18"

docopt = "0.8"
env_logger = "0.4"
ethkey = { path = "../" }
panic_hook = { path = "../../util/panic_hook" }
parity-wordlist="1.2"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
threadpool = "1.7"

[[bin]]
name = "ethkey"
path = "src/main.rs"
doc = false
